# AI-Scientist-exp0

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  bfts_config.yaml  bfts_config_claude-haiku.yaml  bfts_config_gpt-5.yaml  check_inline_imports.py  configure_aws_worker.py  docker-compose.yml  example_code.py  idea_example.json  install_run_pod.sh  launch_scientist_bfts.py  launch_stage1_only.py  launch_stage2_from_run.py  launch_stage3_from_run.py  launch_stage4_from_run.py  package-lock.json  pyproject.toml  readme.md  t.py
.agent/: README.md
adr/: README.md
ai_scientist/: example_code.py  perform_icbinb_writeup.py  perform_llm_review.py  perform_plotting.py  perform_vlm_review.py  perform_writeup.py  review_context.py
aigraph/: README.md  agent_step_1.py  log.py  (+7 more)
langgraph/: .env.example  .gitignore  example.json  langgraph.json  pyproject.toml  readme.md
langgraph/aigraph/: utils.py
langgraph/aigraph/agents/: ablation.py  baseline.py  experiment.py  experiment_prompts.py  ideas.py  ideas_prompts.py  pipeline.py  plotting.py  plotting_prompts.py  research.py  research_prompts.py  reviewer.py  reviewer_prompts.py  tuning.py  tuning_prompts.py  writeup.py  writeup_prompts.py
langgraph/aigraph/data/: code.py.txt  template.tex
langgraph/aigraph/scripts/: run_pipeline.py  run_plotting.py  run_tuning.py  run_writeup.py
research_pipeline/: ARCHITECTURE.md  Makefile  README.md  bfts_config.yaml  bfts_config_claude-haiku.yaml  bfts_config_gpt-5.yaml  launch_scientist_bfts.py  pyproject.toml  upload_runpod_log.py  upload_runpod_workspace.py  upload_worker_log.py
research_pipeline/ai_scientist/: __init__.py  artifact_manager.py  example_code.py  latest_run_finder.py  perform_icbinb_writeup.py  perform_llm_review.py  perform_plotting.py  perform_vlm_review.py  perform_writeup.py  review_storage.py  tree_viz_store.py
research_pipeline/ai_scientist/ideation/: semantic_scholar.py
research_pipeline/ai_scientist/llm/: __init__.py  llm.py  token_tracker.py  vlm.py
research_pipeline/ai_scientist/telemetry/: __init__.py  event_persistence.py
research_pipeline/ai_scientist/treesearch/: agent_manager.py  bfts_utils.py  codegen_agent.py  events.py  gpu_manager.py  interpreter.py  journal.py  log_summarization.py  metrics_extraction.py  multi_seed_evaluation.py  parallel_agent.py  perform_experiments_bfts_with_agentmanager.py  plotting.py  response_parsing.py  types.py  vlm_function_specs.py  worker_process.py
research_pipeline/ai_scientist/treesearch/stages/: base.py  stage1_baseline.py  stage2_tuning.py  stage3_plotting.py  stage4_ablation.py
research_pipeline/ai_scientist/treesearch/utils/: config.py  data_preview.py  response.py  serialize.py  tree_export.py
server/: .flake8  .gitignore  CREATE_RUNPOD_README.md  Dockerfile  Makefile  README.md  debug.py  docker-compose.yml  env.example  env.example.runpod  export_openapi.py  migrate.py  openapi.json  pyproject.toml  railway.toml
server/app/: __init__.py  config.py  main.py  prompt_types.py  routes.py  validation.py
server/app/api/: auth.py  billing.py  chat.py  chat_stream.py  conversations.py  files.py  ideas.py  llm_defaults.py  llm_prompts.py  llm_providers.py  research_pipeline_events.py  research_pipeline_runs.py  research_runs.py  users.py
server/app/middleware/: __init__.py  auth.py
server/app/models/: __init__.py  auth.py  billing.py  chat.py  conversations.py  llm_prompts.py  llm_token_usage.py  research_pipeline.py
server/app/services/: __init__.py  anthropic_service.py  auth_service.py  base_llm_service.py  billing_guard.py  billing_service.py  chat_models.py  cost_calculator.py  grok_service.py  langchain_llm_service.py  openai_service.py  prompts.py  s3_service.py  stripe_client.py  summarizer.py  summarizer_service.py
server/app/services/database/: __init__.py  base.py  billing.py  chat_messages.py  chat_summaries.py  conversations.py  file_attachments.py  ideas.py  imported_conversation_summaries.py  llm_defaults.py  llm_token_usages.py  memories.py  prompts.py  research_pipeline_runs.py  rp_artifacts.py  rp_events.py  rp_tree_viz.py  users.py
server/app/services/openai/: __init__.py  chat_with_idea.py
server/app/services/research_pipeline/: Dockerfile  __init__.py  aws_ec2_manager.py  bfts_config_template.yaml  fake_runpod_server.py  install_run_pod.sh  install_worker.sh  monitor.py  runpod_launcher.py  runpod_manager.py  runpod_repo_setup.sh  worker_repo_setup.sh
server/app/services/research_pipeline/fake_run_pod_data/: stage_1_tree_data.json  stage_2_tree_data.json  stage_3_tree_data.json  stage_4_tree_data.json
server/app/services/scraper/: __init__.py  branchprompt_parser.py  chat_gpt_parser.py  claude_parser.py  errors.py  grok_parser.py
server/database_migrations/: env.py
server/database_migrations/versions/: 0001_initial_schema.py  0002_drop_service_keys.py  0003_manual_seed_columns.py  0004_rp_event_tables.py  0005_research_pipeline_runs.py  0006_research_pipeline_heartbeats.py  0007_rp_artifacts.py  0008_remove_external_id.py  0008_research_pipeline_run_events.py  0009_add_cost_to_research_pipeline_runs.py  0010_create_rp_llm_reviews.py  0010_replace_runpod_columns.py  0011_create_rp_vlm_figure_reviews.py  0012_substage_completed_events.py  0013_add_conversation_status.py  0013_remove_external_id.py  0014_remove_external_id.py  0015_add_llm_token_usages_table.py  0015_drop_conversation_memories_table.py  0016_billing_tables.py  0017_add_last_billed_at_to_research_runs.py  0018_add_llm_token_usages_table.py  0018_rp_paper_generation_events.py  0018_rp_tree_viz.py  0019_add_llm_token_usages_table.py  0019_rp_paper_generation_events.py  0021_best_node_reasoning_events.py
server/playground/: chatgpt_parser.py  claude_parser.py  dump_parser_chunks.py  grok_parser.py  linear_playground.py  test_parser.py
server/tests/: __init__.py  conftest.py  test_base_llm_summarize_document.py  test_chat_stream_errors.py  test_conversations_import.py  test_llm_models.py  test_llm_tool_calls.py  test_manual_seed_request.py  test_parsers_smoke.py  test_structured_idea_generation.py
(+563 files in other folders)
