[project]
name = "AE-Scientist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "anthropic>=0.72.0",
    "backoff>=2.2.1",
    "bayesian-optimization>=3.1.0",
    "black==24.4.2",
    "coolname>=2.2.0",
    "dataclasses-json>=0.6.7",
    "datasets>=4.3.0",
    "dotenv>=0.9.9",
    "funcy>=2.0",
    "genson>=1.3.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub<1.0",
    "humanize>=4.14.0",
    "igraph>=1.0.0",
    "ipython>=9.6.0",
    "jsonschema>=4.25.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
    "pypdf>=6.1.3",
    "python-dotenv==1.1.1",
    "python-ulid>=3.1.0",
    "requests==2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shutup>=0.2.0",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "tiktoken>=0.12.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "isort==5.13.2",
    "mypy==1.11.2",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.3",
    "types-jsonschema>=4.25.1.20251009",
    "types-psutil>=7.0.0.20251001",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | outputs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".venv", "venv"]
skip_glob = ["**/.venv/**", "**/venv/**"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
