[project]
name = "AE-Scientist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.2.0",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain>=1.0.7",
    "langfuse>=3.10.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph>=1.0.3",
    "open-deep-research",
    "pydantic-settings>=2.12.0",
    "pydantic==2.12.4",
]

[tool.uv.sources]
open-deep-research = { git = "https://github.com/langchain-ai/open_deep_research.git" }


[dependency-groups]
dev = ["langgraph-cli[inmem]>=0.4.7", "mypy==1.11.2", "ruff>=0.14.3"]


[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.ruff]
target-version = "py312"
extend-exclude = ["workspaces", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes (includes unused imports/vars)
    "ARG", # flake8-unused-arguments (unused function/method args)
]
extend-select = ["ANN401"]
ignore = ["E501", "G004"] # Line too long, allow f-strings in logging statements
